@@ -437,14 +437,13 @@ compiles the specified lisp files to a platform-independent
    thus permitting &clisp; to be used as a script interpreter.
 <!-- #endif -->
    If &lf; is <command>-</command>,
-   the &standard-input-var; is used instead of a file.
-   If &lf; is the empty string <command>""</command>
-   or <command>"--"</command>, the normal &repl; is
-   entered, and the rest of the arguments is still available in &args;,
-   for parsing by the &init-function; of the current &mem-image;.
-   This option must be the last one.
-   No &RC-file; will be executed.
-</simpara></listitem></varlistentry>
+   the &standard-input-var; is used instead of a file.</simpara>
+<simpara>This option is <emphasis>disabled</emphasis> if the &mem-image;
+ was created by &savemem; with &nil; <constant>:SCRIPT</constant>
+ argument.  In that case the &list-t; &args; starts with &lf;.</simpara>
+<simpara>This option must be the last one.</simpara>
+<simpara>No &RC-file; will be executed.</simpara>
+</listitem></varlistentry>
 
 </variablelist>
 
