@@ -410,7 +410,7 @@
 <!ENTITY wr-integer '<link linkend="bin-output"><function>EXT:WRITE-INTEGER</function></link>'>
 <!ENTITY pr-empty-arr-ansi '<link linkend="pr-empty-arr-ansi"><varname>CUSTOM:*PRINT-EMPTY-ARRAYS-ANSI*</varname></link>'>
 <!ENTITY pr-unreadable-ansi '<link linkend="pr-unreadable-ansi"><varname>CUSTOM:*PRINT-UNREADABLE-ANSI*</varname></link>'>
-<!ENTITY init-function '<olink targetdoc="impnotes" targetptr="image">init function</olink>'>
+<!ENTITY init-function '<olink targetdoc="impnotes" targetptr="init-func">init function</olink>'>
 <!ENTITY RC-file '<olink targetdoc="man" targetptr="opt-norc">RC file</olink>'>
 <!ENTITY compile-file-my '<olink targetdoc="impnotes" targetptr="compilefile"><function>COMPILE-FILE</function></olink>'>
 <!ENTITY load-my '<olink targetdoc="impnotes" targetptr="loadfile"><function>LOAD</function></olink>'>
