@@ -1974,6 +1974,7 @@ LISPSYM(init_hooks,"*INIT-HOOKS*",custom) /* variable for SPVW */
 LISPSYM(fini_hooks,"*FINI-HOOKS*",custom) /* variable for SPVW */
 LISPSYM(quiet,"*QUIET*",system) /* variable for SPVW */
 LISPSYM(norc,"*NORC*",system) /* variable for SPVW */
+LISPSYM(script,"*SCRIPT*",system) /* variable for SPVW */
 LISPSYM(Klisting,"LISTING",keyword) /* argument for SPVW */
 LISPSYM(Koutput_file,"OUTPUT-FILE",keyword) /* argument for SPVW */
 LISPSYM(compile_file,"COMPILE-FILE",lisp) /* function for SPVW */
