@@ -1,5 +1,15 @@
 2006-01-26  Sam Steingold  <sds@gnu.org>
 
+	SAVEINITMEM now accepts :SCRIPT argument that disables
+	interpreting the first positional argument as the script name.
+	* savemem.lisp (saveinitmem): accept :SCRIPT
+	* constsym.d (*script*): added
+	* spvw.d (init_symbol_values): init it
+	(main_actions): when it is NIL, push the script argument onto
+	*ARGS* to be processed by the image's init function
+
+2006-01-26  Sam Steingold  <sds@gnu.org>
+
 	* build-aux/config.sub, build-aux/config.guess: upgrade to 2006-01-02
 
 2006-01-26  Sam Steingold  <sds@gnu.org>
